--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+2025-01-31  Gustavo Pérez Reyes  <ghreyes71@gmail.com>
+
+	* 1.4 release
+
+2017-02-09  Arndt Kaiser  <arndt_k@gmx.de>
+
+	* RTFCharget() improved and wrong calculation inside of sizeof() fixed
+	  (bug #215, thanks to dcb)
+	* new testnotes for RTF<->UTF8 conversion-tests
+
 2013-07-25  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 1.3 release
